# Reconzo-core-logics

./: .gitignore  MANIFEST.in  README.md  push_to_git.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  cibuildwheel.yml  python-package.yml
shopify/: ptal.csv  tgl.csv  tgl_unicommerce.csv  tgl_unicommerce_aug.csv  tgl_unicommerce_jul.csv  tgl_unicommerce_jun.csv
src/fee_audits/: __init__.py  amazon.c  amazon.py  amazon.pyx  public_api.py
src/inventory/: xtracover.py
src/mis/: __init__.py  amazon.py  amazon.pyx  public_api.py
src/payments/: Rangita-Myntra Omni-mapped_orders.csv  Rangita-Myntra Omni-mis.csv  Rangita-Myntra Omni-payment_recon_rangita.csv  __init__.py  amazon.pyx  core.c  core.pyx  myntra.pyx  public_api.py  shopify.pyx
src/payments.egg-info/: PKG-INFO  SOURCES.txt
src/reconzo_core_logics.egg-info/: PKG-INFO  SOURCES.txt
