[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "reconzo-core-logics"
version = "0.2.9"
description = "Core payment reconciliation logic"
requires-python = ">=3.9"
authors = [
  { name = "Anupam Pandey", email = "anupam@reconzo.com" }
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.setuptools]
platforms = ["any"]