[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "reconzo-core-logics"
version = "2.3.3"
description = "Core payment reconciliation logic"
requires-python = ">=3.9"
authors = [
  { name = "Anupam Pandey", email = "anupam@reconzo.com" }
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pandas>=2.0.0",
    "sentence_transformers>=5.1.1",
    "numpy>=1.26.1",
]

[tool.setuptools]
platforms = ["any"]